Reduce size of skeleton pictures

--- a/latex/appendix.tex
+++ b/latex/appendix.tex
@@ -30,62 +30,62 @@
  \end{itemize}
  
 \begin{figure}
-\subfloat[Afrikanischer Elefant]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Afrikanischer_Elefant.jpg}}~
-\subfloat[Amerikanischer Flussbarsch]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Amerikanischer_Flussbarsch.jpg}}~
-\subfloat[Archaeopteryx]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Archaeopteryx.jpg}}~
-\subfloat[Blauwal]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Blauwal.jpg}}~
-\subfloat[Brachiosaurus]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Brachiosaurus.jpg}}
+\subfloat[Afrikanischer Elefant]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Afrikanischer_Elefant.jpg}}~
+\subfloat[Amerikanischer Flussbarsch]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Amerikanischer_Flussbarsch.jpg}}~
+\subfloat[Archaeopteryx]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Archaeopteryx.jpg}}~
+\subfloat[Blauwal]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Blauwal.jpg}}~
+\subfloat[Brachiosaurus]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Brachiosaurus.jpg}}
 \\
-\subfloat[Chamaeleon]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Chamaeleon.jpg}}~
-\subfloat[Dimetrodon]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Dimetrodon.jpg}}~
-\subfloat[Dromedar]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Dromedar.jpg}}~
-\subfloat[Elster]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Elster.jpg}}~
-\subfloat[Forelle]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Forelle.jpg}}
+\subfloat[Chamaeleon]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Chamaeleon.jpg}}~
+\subfloat[Dimetrodon]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Dimetrodon.jpg}}~
+\subfloat[Dromedar]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Dromedar.jpg}}~
+\subfloat[Elster]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Elster.jpg}}~
+\subfloat[Forelle]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Forelle.jpg}}
 \\
-\subfloat[Frosch]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Frosch.jpg}}~
-\subfloat[Gaemse]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Gaemse.jpg}}~
-\subfloat[Giraffe]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Giraffe.jpg}}~
-\subfloat[Gnu]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Gnu.jpg}}~
-\subfloat[Groenlandwal]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Groenlandwal.jpg}}
+\subfloat[Frosch]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Frosch.jpg}}~
+\subfloat[Gaemse]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Gaemse.jpg}}~
+\subfloat[Giraffe]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Giraffe.jpg}}~
+\subfloat[Gnu]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Gnu.jpg}}~
+\subfloat[Groenlandwal]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Groenlandwal.jpg}}
 \\
-\subfloat[Ichthyornis]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Ichthyornis.jpg}}~
-\subfloat[Ichthyosaurus]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Ichthyosaurus.jpg}}~
-\subfloat[Ichthyostega]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Ichthyostega.jpg}}~
-\subfloat[Kaenguru]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Kaenguru.jpg}}~
-\subfloat[Kaffernbueffel]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Kaffernbueffel.jpg}}
+\subfloat[Ichthyornis]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Ichthyornis.jpg}}~
+\subfloat[Ichthyosaurus]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Ichthyosaurus.jpg}}~
+\subfloat[Ichthyostega]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Ichthyostega.jpg}}~
+\subfloat[Kaenguru]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Kaenguru.jpg}}~
+\subfloat[Kaffernbueffel]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Kaffernbueffel.jpg}}
 \\
-\subfloat[Kaninchen]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Kaninchen.jpg}}~
-\subfloat[Klippschliefer]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Klippschliefer.jpg}}~
-\subfloat[Koboldmaki]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Koboldmaki.jpg}}~
-\subfloat[Krokodil]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Krokodil.jpg}}~
-\subfloat[Landschildkroete]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Landschildkroete.jpg}}
+\subfloat[Kaninchen]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Kaninchen.jpg}}~
+\subfloat[Klippschliefer]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Klippschliefer.jpg}}~
+\subfloat[Koboldmaki]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Koboldmaki.jpg}}~
+\subfloat[Krokodil]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Krokodil.jpg}}~
+\subfloat[Landschildkroete]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Landschildkroete.jpg}}
 \phantomcaption
 
 \end{figure}
 \begin{figure}
 \ContinuedFloat
 
-\subfloat[Ohrenrobbe]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Ohrenrobbe.jpg}}~
-\subfloat[Panzerspitzmaus]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Panzerspitzmaus.jpg}}~
-\subfloat[Parasaurolophus walkeri]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Parasaurolophus_walkeri.jpg}}~
-\subfloat[Peloneustes philarchus]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Peloneustes_philarchus.jpg}}~
-\subfloat[Pferd]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Pferd.jpg}}
+\subfloat[Ohrenrobbe]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Ohrenrobbe.jpg}}~
+\subfloat[Panzerspitzmaus]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Panzerspitzmaus.jpg}}~
+\subfloat[Parasaurolophus walkeri]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Parasaurolophus_walkeri.jpg}}~
+\subfloat[Peloneustes philarchus]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Peloneustes_philarchus.jpg}}~
+\subfloat[Pferd]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Pferd.jpg}}
 \\
-\subfloat[Pottwal]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Pottwal.jpg}}~
-\subfloat[Rothirsch]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Rothirsch.jpg}}~
-\subfloat[Schwan]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Schwan.jpg}}~
-\subfloat[Schwein]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Schwein.jpg}}~
-\subfloat[Seehund]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Seehund.jpg}}
+\subfloat[Pottwal]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Pottwal.jpg}}~
+\subfloat[Rothirsch]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Rothirsch.jpg}}~
+\subfloat[Schwan]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Schwan.jpg}}~
+\subfloat[Schwein]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Schwein.jpg}}~
+\subfloat[Seehund]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Seehund.jpg}}
 \\
-\subfloat[Sinornis]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Sinornis.jpg}}~
-\subfloat[Stegosaurus]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Stegosaurus.jpg}}~
-\subfloat[Strauss]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Strauss.jpg}}~
-\subfloat[Taube]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Taube.jpg}}~
-\subfloat[Thrinaxodon]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Thrinaxodon.jpg}}
+\subfloat[Sinornis]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Sinornis.jpg}}~
+\subfloat[Stegosaurus]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Stegosaurus.jpg}}~
+\subfloat[Strauss]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Strauss.jpg}}~
+\subfloat[Taube]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Taube.jpg}}~
+\subfloat[Thrinaxodon]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Thrinaxodon.jpg}}
 \\
-\subfloat[Triceratops]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Triceratops.jpg}}~
-\subfloat[Tyrannosaurus Rex]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Tyrannosaurus_Rex.jpg}}~
-\subfloat[Urpferdchen]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Urpferdchen.jpg}}
+\subfloat[Triceratops]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Triceratops.jpg}}~
+\subfloat[Tyrannosaurus Rex]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Tyrannosaurus_Rex.jpg}}~
+\subfloat[Urpferdchen]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Urpferdchen.jpg}}
 
 
 \caption{Alle Bilder, die als Eingabe für die PCA verwendet wurden.}
