Skeleton generation chapter reviewed (all except section on 3d models

--- a/latex/basics.tex
+++ b/latex/basics.tex
@@ -19,6 +19,7 @@ Dinge, die oft prozedural generiert werden, sind Landschaften, Straßennetze, Ge
 
 %-------------------------------------------
 \section{Animation, Physiksimulationen, IK}
+\label{IK}
 
 \begin{itemize}
  \item Knochen in Hierarchie (Baum)
